--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,13 @@
 {
   "compilerOptions": {
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "target": "ES2023",
+    "strict": true,
+    "esModuleInterop": true,
+    "ignoreDeprecations": "6.0",
+    "checkJs": true,
+     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
